# eula_reader

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
docs/: DEVELOPMENT.md  TECHNICAL_DESIGN.md
